include/mosel_rt.h


typedef struct Model* mm_model;

typedef struct Lpvar* mm_mpvar;

typedef struct Lpctr* mm_linctr;

typedef struct Array* mm_array;

typedef union SetR* mm_set;

typedef struct List* mm_list;

typedef struct Htentry* mm_proc;


typedef union Alltypes		/** AllTypes union **/
	{
	 mm_integer	integer;
	 mm_real	real;
	 mm_boolean	boolean;
	 mm_string	string;
	 mm_mpvar	mpvar;
	 mm_linctr	linctr;
	 mm_set		set;
	 mm_list	list;
	 mm_array	array;
	 mm_ref		ref;
	 mm_proc	proc;
	 mm_memblk	*memblk;
	 size_t		size;
	} mm_alltypes;


const char * MM_RTC XPRMgetlibpath(void);

void MM_RTC XPRMfreelibpath(void);

							/* Model functions */
mm_model MM_RTC XPRMfindmod(const char *name,int number);

mm_model MM_RTC XPRMgetnextmod(mm_model model);

int MM_RTC XPRMrunmod(mm_model model,int *returned, const char *parlist);

void MM_RTC XPRMresetmod(mm_model model);

int MM_RTC XPRMisrunmod(mm_model model);

void MM_RTC XPRMstoprunmod(mm_model model);

int MM_RTC XPRMgetmodprop(mm_model model,int what,mm_alltypes *result);

mm_model MM_RTC XPRMloadmod(const char *bname,const char *intname);

mm_model MM_RTC XPRMloadmodsec(const char *bname,const char *intname,const char *flags,const char *passfile,const char *privkey,const char *keys);

int MM_RTC XPRMunloadmod(mm_model model);


							/* Dictionary access */
int MM_RTC XPRMfindident(mm_model model,const char *text,mm_alltypes *value);

const char * MM_RTC XPRMgetnextident(mm_model model, void **ref);

int MM_RTC XPRMgetannotations(mm_model model, const char *ident, const char *prefix, const char **ann, int maxann);

const char * MM_RTC XPRMgetnextparam(mm_model model, void **ref);

void * MM_RTC XPRMgetnextdep(mm_model model, void *ref, const char **name,
						int *version, int *dso_pkg);

void * MM_RTC XPRMgetnextreq(mm_model model, void *ref,const char **name,
						int *type,void **data);

void * MM_RTC XPRMgetnextpbcomp(mm_model model, void *ref,int code,int *type);

int MM_RTC XPRMselectprob(mm_model model,int code,void *pb);

						/* Procedures/functions */
int MM_RTC XPRMgetprocinfo(mm_proc proc,const char **partyp,int *nbpar,int *type);

mm_proc MM_RTC XPRMgetnextproc(mm_proc proc);

							/* Set access */
int MM_RTC XPRMgetsetsize(mm_set set);

int MM_RTC XPRMgetsettype(mm_set set);

int MM_RTC XPRMgetfirstsetndx(mm_set set);

int MM_RTC XPRMgetlastsetndx(mm_set set);

mm_alltypes* MM_RTC XPRMgetelsetval(mm_set set, int ndx,mm_alltypes *value);

int MM_RTC XPRMgetelsetndx(mm_model model, mm_set set, mm_alltypes *value);

							/* List access */
int MM_RTC XPRMgetlistsize(mm_list list);

int MM_RTC XPRMgetlisttype(mm_list list);

void* MM_RTC XPRMgetnextlistelt(mm_list list,void *ref,int *type,mm_alltypes *value);

void* MM_RTC XPRMgetprevlistelt(mm_list list,void *ref,int *type,mm_alltypes *value);

							/* Array access */
int MM_RTC XPRMgetarrval(mm_array tab, int indices[], void *adr);

void MM_RTC XPRMgetarrsets(mm_array tab,mm_set sets[]);

int MM_RTC XPRMgetarrdim(mm_array tab);

int MM_RTC XPRMgetarrtype(mm_array tab);

int MM_RTC XPRMgetarrsize(mm_array tab);

int MM_RTC XPRMgetfirstarrentry(mm_array tab,int indices[]);

int MM_RTC XPRMgetfirstarrtruentry(mm_array tab,int indices[]);

int MM_RTC XPRMgetlastarrentry(mm_array tab,int indices[]);

int MM_RTC XPRMgetnextarrentry(mm_array tab,int indices[]);

int MM_RTC XPRMgetnextarrtruentry(mm_array tab,int indices[]);

int MM_RTC XPRMchkarrind(mm_array tab,const int indices[]);

int MM_RTC XPRMcmpindices(int nbdim,const int ind1[],const int ind2[]);

							/* Record access */
void* MM_RTC XPRMgetnextfield(mm_model model, void *ref,int code,const char **name, int *type,int *number);

void MM_RTC XPRMgetfieldval(mm_model model, int code, void *ref, int num,mm_alltypes *value);

							/* Solution */
int MM_RTC XPRMgetvarnum(mm_model model, mm_mpvar var);

int MM_RTC XPRMgetctrnum(mm_model model, mm_linctr ctr);

int MM_RTC XPRMgetprobstat(mm_model model);

double MM_RTC XPRMgetobjval(mm_model model);

double MM_RTC XPRMgetvsol(mm_model model, mm_mpvar var);

double MM_RTC XPRMgetcsol(mm_model model, mm_linctr ctr);

double MM_RTC XPRMgetrcost(mm_model model, mm_mpvar var);

double MM_RTC XPRMgetdual(mm_model model, mm_linctr ctr);

double MM_RTC XPRMgetslack(mm_model model, mm_linctr ctr);

double MM_RTC XPRMgetact(mm_model model, mm_linctr ctr);

							/* Miscellaneous */
int MM_RTC XPRMinit(void);

int MM_RTC XPRMfinish(void);

int MM_RTC XPRMgetlicerrmsg(char *msg,int len);

int MM_RTC XPRMlicense(int *oemnum, char *oemmsg);

const char * MM_RTC XPRMgetlicinfo(void);

void MM_RTC XPRMsetlocaledir(const char *path);

const char * MM_RTC XPRMgetlocaledir(void);

const char * MM_RTC XPRMgetversion(void);

int MM_RTC XPRMgetversions(int whichone);

int MM_RTC XPRMexportprob(mm_model model, const char *options,const char *fname, mm_linctr obj);

int MM_RTC XPRMgettypeprop(mm_model model, int ntyp, int what,
							mm_alltypes *value);

int MM_RTC XPRMfindtypecode(mm_model model, const char *typenme);