include/mosel_mc.h


int MM_RTC XPRMcompmod(const char *options,const char *srcfile,const char *destfile,const char *userc);

int MM_RTC XPRMcompmodsec(const char *options,const char *srcfile,const char *destfile,const char *userc,const char *passfile,const char *privkey,const char *kfile);

int MM_RTC XPRMexecmod(const char *options,const char *srcfile,const char *parlist, int *returned, mm_model *rtmod);