include/xprm.bas

    
    If nStringsFetched > 0 Then
        For i = 1 To nStringsFetched
            annotations(LBound(annotations) + i - 1) = XPRMreadcstring(annptrs(i))
        Next
    End If
    XPRMgetannotations = nStrings
End Function

#Else

' Utilities
Declare Function XPRMreadcstring Lib "xprmvb" Alias "vbXPRMreadcstring" (ByVal stringptr As Long) As String

' Model functions
Declare Function XPRMcompmod Lib "xprm_mc" Alias "_XPRMcompmod@16" (ByVal options As String, ByVal srcfile As String, ByVal dstfile As String, ByVal userc As String) As Long
Declare Function XPRMcompmodsec Lib "xprm_mc" Alias "_XPRMcompmodsec@28" (ByVal options As String, ByVal srcfile As String, ByVal dstfile As String, ByVal userc As String, ByVal passfile As String, ByVal privkey As String, ByVal kfile As String) As Long
Declare Function XPRMexecmod Lib "xprm_mc" Alias "_XPRMexecmod@20" (ByVal options As String, ByVal srcfile As String, ByVal parlist As String, ByRef returned As Long, Optional ByRef rtmod As Long = 0) As Long
Declare Function XPRMfindmod Lib "xprm_rt" Alias "_XPRMfindmod@8" (ByVal name As String, ByVal number As Long) As Long
Declare Function XPRMgetnextmod Lib "xprm_rt" Alias "_XPRMgetnextmod@4" (ByVal model As Long) As Long
Declare Function XPRMrunmod Lib "xprm_rt" Alias "_XPRMrunmod@12" (ByVal model As Long, ByRef returned As Long, ByVal parlist As String) As Long
Declare Sub XPRMresetmod Lib "xprm_rt" Alias "_XPRMresetmod@4" (ByVal model As Long)
Declare Function XPRMisrunmod Lib "xprm_rt" Alias "_XPRMisrunmod@4" (ByVal model As Long) As Long
Declare Sub XPRMstoprunmod Lib "xprm_rt" Alias "_XPRMstoprunmod@4" (ByVal model As Long)
Declare Function XPRMloadmod Lib "xprm_rt" Alias "_XPRMloadmod@8" (ByVal bname As String, ByVal intname As String) As Long
Declare Function XPRMloadmodsec Lib "xprm_rt" Alias "_XPRMloadmodsec@24" (ByVal bname As String, ByVal intname As String, ByVal flags As String, ByVal passfile As String, ByVal privkey As String, ByVal keys As String) As Long
Declare Function XPRMunloadmod Lib "xprm_rt" Alias "_XPRMunloadmod@4" (ByVal model As Long) As Long
Declare Function XPRMgetmodprop Lib "xprmvb" Alias "vbXPRMgetmodprop" (ByVal model As Long, ByVal what As Long, ByRef result As Variant) As Long
Declare Function XPRMgetmodversion Lib "xprmvb" Alias "vbXPRMgetmodversion" (ByVal model As Long, ByVal what As Long, ByRef result As Variant) As Long

Declare Function XPRMgetdllpath Lib "xprmvb" Alias "vbXPRMgetlibpath" () As String
Declare Function XPRMgetlibpath Lib "xprmvb" Alias "vbXPRMgetlibpath" () As String
Declare Sub XPRMfreelibpath Lib "xprm_rt" Alias "_XPRMfreelibpath@0" ()


' Dictionary access
Declare Function XPRMfindident Lib "xprmvb" Alias "vbXPRMfindident" (ByVal model As Long, ByVal text As String, ByRef value As Variant) As Long
Declare Function XPRMgetnextident Lib "xprmvb" Alias "vbXPRMgetnextident" (ByVal model As Long, ByRef ref As Long) As String
Declare Function XPRMgetnextparam Lib "xprmvb" Alias "vbXPRMgetnextparam" (ByVal model As Long, ByRef ref As Long) As String
Declare Function XPRMgetnextdep Lib "xprmvb" Alias "vbXPRMgetnextdep" (ByVal model As Long, ByVal ref As Long, ByRef name As String, ByRef version As Long, ByRef dso_pkg As Long) As Long
Declare Function XPRMgetnextreq Lib "xprmvb" Alias "vbXPRMgetnextreq" (ByVal model As Long, ByVal ref As Long, ByRef name As String, ByRef typecode As Long, ByRef data As Long) As Long
Declare Function XPRMgetnextpbcomp Lib "xprm_rt" Alias "_XPRMgetnextbpcomp@16" (ByVal model As Long, ByVal ref As Long, ByVal code As Long, ByRef typecode As Long) As Long
Declare Function XPRMselectprob Lib "xprm_rt" Alias "_XPRMselectprob@12" (ByVal model As Long, ByVal code As Long, ByVal pb As Long) As Long

' Procedures/functions
Declare Function XPRMgetprocinfo Lib "xprmvb" Alias "vbXPRMgetprocinfo" (ByVal proc As Long, ByRef partyp As String, ByRef nbpar As Long, ByRef ftype As Long) As Long
Declare Function XPRMgetnextproc Lib "xprmvb" Alias "vbXPRMgetnextproc" (ByVal proc As Long) As Long

' Set access
Declare Function XPRMgetsetsize Lib "xprmvb" Alias "vbXPRMgetsetsize" (ByVal mmset As Long) As Long
Declare Function XPRMgetsettype Lib "xprmvb" Alias "vbXPRMgetsettype" (ByVal mmset As Long) As Long
Declare Function XPRMgetfirstsetndx Lib "xprmvb" Alias "vbXPRMgetfirstsetndx" (ByVal mmset As Long) As Long
Declare Function XPRMgetlastsetndx Lib "xprmvb" Alias "vbXPRMgetlastsetndx" (ByVal mmset As Long) As Long
Declare Sub XPRMgetelsetval Lib "xprmvb" Alias "vbXPRMgetelsetval" (ByVal mmset As Long, ByVal ndx As Long, ByRef value As Variant)
Declare Function XPRMgetelsetndx Lib "xprmvb" Alias "vbXPRMgetelsetndx" (ByVal model As Long, ByVal mmset As Long, ByRef value As Variant) As Long

' List access
Declare Function XPRMgetlistsize Lib "xprmvb" Alias "vbXPRMgetlistsize" (ByVal list As Long) As Long
Declare Function XPRMgetlisttype Lib "xprmvb" Alias "vbXPRMgetlisttype" (ByVal list As Long) As Long
Declare Function XPRMgetprevlistelt Lib "xprmvb" Alias "vbXPRMgetprevlistelt" (ByVal list As Long, ByVal ref As Long, ByRef typeref As Long, ByRef value As Variant) As Long
Declare Function XPRMgetnextlistelt Lib "xprmvb" Alias "vbXPRMgetnextlistelt" (ByVal list As Long, ByVal ref As Long, ByRef typeref As Long, ByRef value As Variant) As Long


' Array access
Declare Function XPRMgetarrval Lib "xprmvb" Alias "vbXPRMgetarrval" (ByVal mmarray As Long, ByRef indices() As Long, ByRef adr As Variant) As Long
Declare Sub XPRMgetarrsets Lib "xprmvb" Alias "vbXPRMgetarrsets" (ByVal mm_array As Long, ByRef sets() As Long)
Declare Function XPRMgetarrdim Lib "xprmvb" Alias "vbXPRMgetarrdim" (ByVal mmarray As Long) As Long
Declare Function XPRMgetarrtype Lib "xprmvb" Alias "vbXPRMgetarrtype" (ByVal mmarray As Long) As Long
Declare Function XPRMgetarrsize Lib "xprmvb" Alias "vbXPRMgetarrsize" (ByVal mmarray As Long) As Long
Declare Function XPRMgetfirstarrentry Lib "xprmvb" Alias "vbXPRMgetfirstarrentry" (ByVal mmarray As Long, ByRef indices() As Long) As Long
Declare Function XPRMgetfirstarrtruentry Lib "xprmvb" Alias "vbXPRMgetfirstarrtruentry" (ByVal mmarray As Long, ByRef indices() As Long) As Long
Declare Function XPRMgetlastarrentry Lib "xprmvb" Alias "vbXPRMgetlastarrentry" (ByVal mmarray As Long, ByRef indices() As Long) As Long
Declare Function XPRMgetnextarrentry Lib "xprmvb" Alias "vbXPRMgetnextarrentry" (ByVal mmarray As Long, ByRef indices() As Long) As Long
Declare Function XPRMgetnextarrtruentry Lib "xprmvb" Alias "vbXPRMgetnextarrtruentry" (ByVal mmarray As Long, ByRef indices() As Long) As Long
Declare Function XPRMchkarrind Lib "xprmvb" Alias "vbXPRMchkarrind" (ByVal mmarray As Long, ByRef indices() As Long) As Long
Declare Function XPRMcmpindices Lib "xprmvb" Alias "vbXPRMcmpindices" (ByVal nbdim As Long, ByRef ind1() As Long, ByRef ind2() As Long) As Long

' Record access
Declare Function XPRMgetnextfield Lib "xprmvb" Alias "vbXPRMgetnextfield" (ByVal model As Long, ByVal ref As Long, ByVal code As Long, ByRef name As String, ByRef typecode As Long, ByRef number As Long) As Long
' The VB version of XPRMgetfieldval takes an extra parameter (compared to the C version) telling it the type of the data in the field
Declare Sub XPRMgetfieldval Lib "xprmvb" Alias "vbXPRMgetfieldval" (ByVal model As Long, ByVal recordtype As Long, ByVal recordptr As Long, ByVal fieldnum As Long, ByVal fieldtype As Long, ByRef value As Variant)

' Solution
Declare Function XPRMgetvarnum Lib "xprmvb" Alias "vbXPRMgetvarnum" (ByVal model As Long, ByVal var As Long) As Long
Declare Function XPRMgetctrnum Lib "xprmvb" Alias "vbXPRMgetctrnum" (ByVal model As Long, ByVal ctr As Long) As Long
Declare Function XPRMgetprobstat Lib "xprmvb" Alias "vbXPRMgetprobstat" (ByVal model As Long) As Long
Declare Function XPRMgetobjval Lib "xprmvb" Alias "vbXPRMgetobjval" (ByVal model As Long) As Double
Declare Function XPRMgetvsol Lib "xprmvb" Alias "vbXPRMgetvsol" (ByVal model As Long, ByVal var As Long) As Double
Declare Function XPRMgetcsol Lib "xprmvb" Alias "vbXPRMgetcsol" (ByVal model As Long, ByVal ctr As Long) As Double
Declare Function XPRMgetrcost Lib "xprmvb" Alias "vbXPRMgetrcost" (ByVal model As Long, ByVal var As Long) As Double
Declare Function XPRMgetdual Lib "xprmvb" Alias "vbXPRMgetdual" (ByVal model As Long, ByVal crt As Long) As Double
Declare Function XPRMgetslack Lib "xprmvb" Alias "vbXPRMgetslack" (ByVal model As Long, ByVal ctr As Long) As Double
Declare Function XPRMgetact Lib "xprmvb" Alias "vbXPRMgetact" (ByVal model As Long, ByVal ctr As Long) As Double

' Miscellaneous
Declare Function XPRMinit Lib "xprm_rt" Alias "_XPRMinit@0" () As Long
Declare Function XPRMfinish Lib "xprmvb" Alias "vbXPRMfinish" () As Long
Declare Function XPRMfree Lib "xprmvb" Alias "vbXPRMfinish" () As Long
Declare Function XPRMgetlicerrmsg Lib "xprmvb" Alias "vbXPRMgetlicerrmsg" (ByRef msg As String) As Long
Declare Function XPRMlicense Lib "xprmvb" Alias "vbXPRMlicense" (ByRef oemnum As Long, ByRef oemmsg As String) As Long
Declare Function XPRMgetlicinfo Lib "xprmvb" Alias "vbXPRMgetlicinfo" () As String
Declare Sub XPRMsetlocaledir Lib "xprm_rt" Alias "_XPRMsetlocaledir@4" (ByVal path As String)
Declare Function XPRMgetlocaledir Lib "xprmvb" Alias "vbXPRMgetlocaledir" () As String
Declare Function XPRMgetversion Lib "xprmvb" Alias "vbXPRMgetversion" () As String
Declare Function XPRMgetversions Lib "xprm_rt" Alias "_XPRMgetversions@4" (ByVal whichone As Long) As Long
Declare Function XPRMexportprob Lib "xprmvb" Alias "vbXPRMexportprob" (ByVal model As Long, ByVal options As String, ByVal fname As String, ByVal obj As Long) As Long

Declare Sub XPRMskipalldep Lib "xprmvb" Alias "vbXPRMskipalldep" (ByVal model As Long, ByVal ref As Long)


Declare Function XPRMgettypeprop Lib "xprmvb" Alias "vbXPRMgettypeprop" (ByVal model As Long, ByVal ntyp As Long, ByVal what As Long, ByRef value As Variant) As Long
Declare Function XPRMfindtypecode Lib "xprm_rt" Alias "_XPRMfindtypecode@8" (ByVal model As Long, ByVal typenme As String) As Long
